--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
   "author": "billtt",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.7",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "xml2js": "^0.4.23"
   }
 }
